--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="./resources/css/reset.css">
         <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
         <title>Excursion</title>
     </head>
@@ -11,7 +10,7 @@
             <h4 class="link">Download Excursion (Coming Soon!)</h4>
         </header>
         <div id="main-content">
-            <video autoplay><source src="./resources/visuals/excursion.mp4">VIDEO NOT SUPPORTED</video>
+            <video autoplay muted><source src="./resources/visuals/excursion.mp4">VIDEO NOT SUPPORTED</video>
             <div id="guide">
                 <h2 class = "white">Your personal travel guide</h1>
                 <h4 class="gray">Excusion remembers places you like, and recommends new points of intrest around you.</h4>
@@ -24,7 +23,7 @@
             </div>
         </div>
         <footer>
-            <h4 class ="gray">&copy Excursion</h4>
+            <h4 class ="gray copy">&copy Excursion</h4>
         </footer>
     </body>
 </html>
